# baton

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo.py  pyproject.toml  server.json  smithery.yaml
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish-mcp.yml  release.yml
baton_mcp/: __init__.py  __main__.py  server.py
docs/: README.md  claude-code-live-gate.md
eval/: harness.py  run.py  tasks.py
examples/: README.md  fake_provider.py  minimal_library.py
mcpb/: README.md  manifest.json
plugins/baton/: .mcp.json  README.md
plugins/baton/.claude-plugin/: plugin.json
plugins/baton/commands/: run.md
plugins/baton/skills/orchestrate/: SKILL.md
src/baton/: __init__.py  agent.py  blackboard.py  bootstrap.py  cli.py  cost.py  projector.py  registry.py  router.py  runtime.py  supervisor.py  synthesizer.py  types.py  worker.py
src/baton/providers/: __init__.py  anthropic.py  base.py  claude_code.py  cli_agent.py  codex.py  fake.py  openai_compat.py
src/baton/tools/: base.py  docker_sandbox.py  factory.py  fetch_url.py  read_file.py  run_python.py  sandbox.py
src/orchestrator/: __init__.py  agent.py  blackboard.py  cost.py  projector.py  registry.py  router.py  runtime.py  supervisor.py  synthesizer.py  worker.py
src/orchestrator/providers/: __init__.py  anthropic.py  base.py  fake.py  openai_compat.py
src/orchestrator/tools/: base.py  docker_sandbox.py  factory.py  fetch_url.py  read_file.py  run_python.py  sandbox.py
tests/: test_agent.py  test_agent_external_tools.py  test_blackboard.py  test_bootstrap.py  test_bootstrap_wiring.py  test_cli.py  test_cost.py  test_demo.py  test_projector.py  test_registry.py  test_registry_seed.py  test_router.py  test_runtime.py  test_runtime_agentic.py  test_runtime_agentic_reroute.py  test_smoke.py  test_supervisor.py  test_synthesizer.py  test_tooling.py  test_types.py  test_worker.py
tests/eval/: test_agentic_arm.py  test_compare_arms.py  test_harness.py  test_run.py  test_run_suite.py  test_suite_goals.py  test_tasks.py
tests/integration/: test_agentic_integration.py  test_anthropic_integration.py  test_docker_sandbox_integration.py  test_openai_compat_integration.py
tests/mcp/: test_run_goal.py  test_server.py
tests/providers/: test_anthropic.py  test_anthropic_stream.py  test_anthropic_tools.py  test_base.py  test_claude_code.py  test_cli_agent.py  test_codex.py  test_fake.py  test_fake_stream.py  test_openai_compat.py  test_openai_compat_stream.py  test_openai_compat_tools.py
tests/providers/fixtures/: claude_code_result.2026-07-22.json  codex_result.2026-07-23-live.jsonl  codex_result.2026-07-23.jsonl
tests/tools/: test_base.py  test_docker_sandbox.py  test_fetch_url.py  test_read_file.py  test_run_python.py  test_sandbox.py  test_sandbox_factory.py  test_tools_factory.py
tests/webui/: test_app.py  test_runner.py
webui/: __init__.py  __main__.py  _demo.py  app.py  runner.py  server.py
