# pyproject.toml
[project]
name = "baton"
version = "0.1.0"
description = "Baton — a from-scratch, cross-provider multi-model AI orchestration engine (supervisor routing, agentic tools, forgery-resistant evaluation)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ribato" }]
keywords = [
    "llm",
    "ai-orchestration",
    "multi-agent",
    "agentic",
    "supervisor",
    "routing",
    "anthropic",
    "openai",
    "evaluation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
]

# The distribution installs as `baton`; the importable package is `orchestrator`.
[project.urls]
Homepage = "https://github.com/ribato/baton"
Repository = "https://github.com/ribato/baton"
Issues = "https://github.com/ribato/baton/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: touches the real network; skipped by default",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "eval"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
