# pyproject.toml
[project]
name = "baton-orchestrator"
dynamic = ["version"]
description = "Baton — a from-scratch, cross-provider multi-model AI orchestration engine (supervisor routing, agentic tools, forgery-resistant evaluation)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ribato" }]
keywords = [
    "llm",
    "ai-orchestration",
    "multi-agent",
    "agentic",
    "supervisor",
    "routing",
    "anthropic",
    "openai",
    "evaluation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # Honest, not aspirational: the subprocess sandbox and CLI-agent providers use
    # os.setsid/killpg (POSIX-only). The pure-Python library core (Runtime, Router,
    # Registry, etc., minus baton.tools.sandbox / cli_agent) is importable cross-platform.
    "Operating System :: POSIX",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "httpx>=0.27",     # direct use in the host-mediated fetch_url tool
]

[project.optional-dependencies]
# Web UI (webui/): `uv sync --extra ui` then `uv run python -m webui`.
ui = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
# MCP server (baton_mcp/): `uv sync --extra mcp` then `uv run python -m baton_mcp`.
# Exposes Baton as a tool to IDE AI agents (Claude Code, Cursor, VS Code, Windsurf).
mcp = [
    "mcp>=1.2",
]

[project.scripts]
baton = "baton.cli:main"

# PyPI distribution name is `baton-orchestrator` (plain `baton` is taken); the
# importable package and the CLI command are both still `baton`.
[project.urls]
Homepage = "https://github.com/ribato22/baton"
Repository = "https://github.com/ribato22/baton"
Issues = "https://github.com/ribato22/baton/issues"
Changelog = "https://github.com/ribato22/baton/blob/main/CHANGELOG.md"
Documentation = "https://github.com/ribato22/baton#readme"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "fastapi>=0.110",   # webui tests
    "uvicorn>=0.29",
    "mcp>=1.2",         # baton_mcp tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/baton/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/baton"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: touches the real network; skipped by default",
]
filterwarnings = [
    # starlette's TestClient deprecating httpx in favour of httpx2 (test-only, upstream).
    "ignore:Using .httpx. with .starlette.testclient. is deprecated",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "eval", "webui", "baton_mcp"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# webui/app.py is a single self-contained HTML/CSS/JS document embedded as one
# string literal (no build step, no external assets). Inline SVG path data and
# CSS declarations legitimately run past the line limit; wrapping them would hurt
# readability without any code-quality gain. Line-length is not enforced here.
"webui/app.py" = ["E501"]

[tool.mypy]
# Pragmatic lenient baseline (deliberately NOT --strict): enforces the shipped
# py.typed promise (src/baton/py.typed) without a large upfront annotation
# project. mypy defaults + ignore_missing_imports, scoped to the library only
# (not tests/eval/webui/examples).
python_version = "3.11"
ignore_missing_imports = true
files = ["src/baton"]
